# tic-tac-toe

./: README.md  build.cmd  build.sh
.github/workflows/: cpp-ci-ubuntu.yml  cpp-ci-windows.yml  cpp-ci.yml
src/: AI.cpp  AI.h  AIManager.cpp  AIManager.h  CMakeLists.txt  EndGameChecker.cpp  EndGameChecker.h  GameManager.cpp  GameManager.h  Grid.cpp  Grid.h  ImageManager.cpp  ImageManager.h  MainWindow.cpp  MainWindow.h  OptionManager.cpp  OptionManager.h  OptionWindow.cpp  OptionWindow.h  OptionsManager.cpp  OptionsManager.h  OptionsWindow.cpp  OptionsWindow.h  Utils.h  main.cpp
